# ML_Compiler

./: CMakeLists.txt  README.md
include/: activation.h  dense.h  layer.h  matrix.h
src/: activation.cpp  dense.cpp  matrix.cpp
tests/: test_matrix.cpp
